Publish notebooks and data

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ pages:
   - cp towards_reproducible_science.html public/index.html
   - cp towards_reproducible_science.md public/
   - cp -r images/ public/.
+  - cp -r data/ public/.
+  - cp -r notebooks/ public/.
   artifacts:
     paths:
     - public
