Add html with remark.js included

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ pages:
   script:
   - mkdir public
   - cp towards_reproducible_science.html public/index.html
+  - cp towards_reproducible_science_remark_included.html public/index_remark_included.html
   - cp towards_reproducible_science.md public/
   - cp -r images/ public/.
   - cp -r data/ public/.
